<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dip" >

    <com.triggerhappy.android.controller.HDRView
        android:id="@+id/HDR_ViewFinder"
        android:layout_width="wrap_content"
        android:layout_height="171dp"
        android:src="@drawable/hdr_view_screen" />

    <Button
        android:id="@+id/hdr_exp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/exposure_interval" />

    <Button
        android:id="@+id/hdr_num"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/number_of_shots" />

    <Button
        android:id="@+id/hdr_base"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/base_shutter" />

</LinearLayout>