<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dip" >

    <TextView
        android:id="@+id/info_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="15dp"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/about_LearnMore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_learn_more" 
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/about_BuyTriggerHappy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_get_trigger_happy" />

        <Button
            android:id="@+id/about_CloseWindow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_close" />
    </LinearLayout>

</LinearLayout>