<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dip" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/brampDuration_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true" 
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/setting_duration"
            android:textColor="@color/Black"
            android:textSize="21dp" >
        </TextView>

        <TextView
            android:id="@+id/brampDuration_display"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/setting_default"
            android:textColor="@color/Black"
            android:textSize="21dp" >
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/brampInterval_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true" 
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/setting_interval"
            android:textColor="@color/Black"
            android:textSize="21dp" >
        </TextView>

        <TextView
            android:id="@+id/brampInterval_display"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/setting_default"
            android:textColor="@color/Black"
            android:textSize="21dp" >
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/brampShutter_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true" 
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/setting_start_shutter"
            android:textColor="@color/Black"
            android:textSize="21dp" >
        </TextView>

        <TextView
            android:id="@+id/brampShutter_display"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/setting_default"
            android:textColor="@color/Black"
            android:textSize="21dp" >
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/brampFinalShutter_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true" 
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/setting_final_shutter"
            android:textColor="@color/Black"
            android:textSize="21dp" >
        </TextView>

        <TextView
            android:id="@+id/brampFinalShutter_display"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/setting_default"
            android:textColor="@color/Black"
            android:textSize="21dp" >
        </TextView>
    </RelativeLayout>

</LinearLayout>